All_Component_DX/force-app/main/default/objects/Route_Stop__c/fields/Delivered__c.field-meta.xml
<CustomField>
    <fullName>Delivered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the product has been delivered at the current location or not</description>
    <label>Delivered?</label>
    <type>Checkbox</type>
</CustomField>