All_Component_DX/force-app/main/default/objects/Route_Stop__c/fields/Next_Stop__c.field-meta.xml
<CustomField>
    <fullName>Next_Stop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Next location (hub or depot)</description>
    <label>Next Stop</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>Route Stops (Next Stop)</relationshipLabel>
    <relationshipName>Route_Stops1</relationshipName>
    <type>Lookup</type>
</CustomField>