All_Component_DX/force-app/main/default/objects/Route_Stop__c/fields/Picked__c.field-meta.xml
<CustomField>
    <fullName>Picked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the product has been picked for shipment at the current location or not</description>
    <label>Picked?</label>
    <type>Checkbox</type>
</CustomField>