All_Component_DX/force-app/main/default/objects/Route_Stop__c/fields/Received__c.field-meta.xml
<CustomField>
    <fullName>Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the product has been received at the current location or not</description>
    <label>Received?</label>
    <type>Checkbox</type>
</CustomField>