All_Component_DX/force-app/main/default/objects/Route_Stop__c/fields/Received_By__c.field-meta.xml
<CustomField>
    <fullName>Received_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User that received the product at the current location</description>
    <inlineHelpText>Received By</inlineHelpText>
    <label>Received By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Route_Stops</relationshipName>
    <type>Lookup</type>
</CustomField>