All_Component_DX/force-app/main/default/objects/Route_Stop__c/fields/Record_Card__c.field-meta.xml
<CustomField>
    <fullName>Record_Card__c</fullName>
    <label>Route Card</label>
    <referenceTo>Route_Card__c</referenceTo>
    <relationshipLabel>Route Stops</relationshipLabel>
    <relationshipName>Route_Stop</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>