All_Component_DX/force-app/main/default/objects/Route_Stop__c/fields/Shipment_Initiated__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Initiated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shipment Initiated?</label>
    <type>Checkbox</type>
</CustomField>