All_Component_DX/force-app/main/default/objects/Route_Stop__c/fields/Shipped__c.field-meta.xml
<CustomField>
    <fullName>Shipped__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the product has been shipped from the current location or not</description>
    <label>Shipped?</label>
    <type>Checkbox</type>
</CustomField>