All_Component_DX/force-app/main/default/objects/Route_Stop__c/fields/Shipped_By__c.field-meta.xml
<CustomField>
    <fullName>Shipped_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User that shipped the product from the current location</description>
    <label>Shipped By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Route_Stops3</relationshipName>
    <type>Lookup</type>
</CustomField>