All_Component_DX/force-app/main/default/objects/Route_Stop__c/fields/Stop_Location__c.field-meta.xml
<CustomField>
    <fullName>Stop_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Current location (hub or depot)</description>
    <label>Stop Location</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>Route Stops</relationshipLabel>
    <relationshipName>Route_Stops</relationshipName>
    <type>Lookup</type>
</CustomField>